--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-﻿streamlit
+streamlit
 pandas
 openpyxl
 ics
 pytz
-matplotlib
-Pillow
-streamlit-javascript
-extra-streamlit-components
 streamlit-extras
-
-
-
